# meta-transaction

./: Cargo.toml  README.md  index.ts  jest.config.js  package.json  rustfmt.toml  tsconfig.json  typechain-compiler-config.json  typechain.config.json
contracts/flipper/: Cargo.toml  lib.rs
contracts/forwarder/: Cargo.toml  lib.rs
contracts/inkmetatransaction/: Cargo.toml  lib.rs
contracts/registry/: Cargo.toml  lib.rs
crates/meta_tx_context/: Cargo.toml
crates/meta_tx_context/src/: lib.rs  traits.rs
tests/: flipper.test.ts  globalSetup.ts  ink-meta-transaction.spec.ts  registry.test.ts
tests/artifacts/: flipper.contract  flipper.json  forwarder.contract  forwarder.json  registry.contract  registry.json
typechain-generated/build-extrinsic/: ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/constructors/: flipper.ts  ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/contracts/: flipper.ts  ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/data/: flipper.json
typechain-generated/event-data/: inkmetatransaction.json
typechain-generated/event-types/: ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/events/: flipper.ts  ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/mixed-methods/: flipper.ts  ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/query/: flipper.ts  ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/tx-sign-and-send/: flipper.ts  ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/types-arguments/: ink-meta-transaction.ts  inkmetatransaction.ts
typechain-generated/types-returns/: ink-meta-transaction.ts
(+32 files in other folders)
